--- a/package.json
+++ b/package.json
@@ -13,12 +13,26 @@
 		"dev:build": "esbuild dev.ts ./src --bundle --outdir=dist --packages=external --platform=node --sourcemap --watch",
 		"dev:run": "node --inspect -r ./dist/dev.js --watch dist/src",
 		"build": "esbuild index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
-		"start": "node dist"
+		"start": "prisma migrate deploy && node dist"
 	},
 	"dependencies": {
-		"esbuild": "^0.23.0"
+		"@prisma/client": "^6.8.2",
+		"axios": "^1.8.4",
+		"date-fns": "^4.1.0",
+		"dotenv": "^16.5.0",
+		"drizzle-orm": "^0.44.0",
+		"esbuild": "^0.23.0",
+		"express": "^4.21.2",
+		"node-cron": "^3.0.3",
+		"pg": "^8.16.0"
 	},
 	"devDependencies": {
-		"@types/node": "^20.14.9"
+		"@types/express": "^5.0.1",
+		"@types/node": "^20.14.9",
+		"@types/pg": "^8.15.2",
+		"drizzle-kit": "^0.31.1",
+		"prisma": "^6.8.2",
+		"tsx": "^4.19.4",
+		"zod": "^3.25.36"
 	}
 }
