--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev:build": "esbuild dev.ts ./src --bundle --outdir=dist --packages=external --platform=node --sourcemap --watch",
 		"dev:run": "node --inspect -r ./dist/dev.js --watch dist/src",
 		"build": "esbuild index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
-    	"start": "prisma migrate deploy && prisma generate && node dist/index.js"
+		"start": "prisma migrate deploy && prisma generate && node dist/index.js"
 	},
 	"dependencies": {
 		"@prisma/client": "^6.8.2",
@@ -23,11 +23,13 @@
 		"drizzle-orm": "^0.44.0",
 		"esbuild": "^0.23.0",
 		"express": "^4.21.2",
+		"multer": "^2.0.1",
 		"node-cron": "^3.0.3",
 		"pg": "^8.16.0"
 	},
 	"devDependencies": {
 		"@types/express": "^5.0.1",
+		"@types/multer": "^1.4.13",
 		"@types/node": "^20.14.9",
 		"@types/pg": "^8.15.2",
 		"drizzle-kit": "^0.31.1",
