--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,9 @@
 PORT: "3000",
 
 # SAIH Ebro API configuration
-SAIHEBRO_API_BASE_URL: "https://www.saihebro.com",
-SAIHEBRO_API_PATH: "/datos/apiopendata",
+SAIHEBRO_API_BASE_URL: "https://www.saihebro.com/datos/apiopendata",
 SAIHEBRO_BASE_PORT: 443,
 SAIHEBRO_API_KEY: "YOUR_API_KEY",
 
 # PostgreSQL database configuration
-POSTGRES_DATABASE_URL: "YOUR_DATABASE_URL",
+DATABASE_URL: "YOUR_DATABASE_URL",
