added rate limit, cleaned up package, small refactors

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
 PORT: "3000",
 
+# AlertAigua configuration
+ALERTAIGUA_API_BASE_URL: "YOUR_ALERTAIGUA_API_BASE_URL",
+
 # SAIH Ebro API configuration
 SAIHEBRO_API_BASE_URL: "https://www.saihebro.com/datos/apiopendata",
 SAIHEBRO_BASE_PORT: 443,
