--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "node-ts",
-	"version": "0.0.0",
-	"author": "dayblox",
-	"description": "Node.js & TypeScript starter",
+	"name": "alertaigua-backend",
+	"version": "0.0.1",
+	"author": "Deniz Petzold",
+	"description": "Backend for the Alertaigua project, providing APIs and services for flood alerting and monitoring.",
 	"packageManager": "pnpm@9.4.0",
 	"engines": {
 		"node": ">=18.11",
@@ -23,6 +23,7 @@
 		"drizzle-orm": "^0.44.0",
 		"esbuild": "^0.23.0",
 		"express": "^4.21.2",
+		"express-rate-limit": "^7.5.0",
 		"multer": "^2.0.1",
 		"node-cron": "^3.0.3",
 		"pg": "^8.16.0"
