--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,11 @@
-PORT: "3000",
-
-# AlertAigua configuration
-ALERTAIGUA_API_BASE_URL: "YOUR_ALERTAIGUA_API_BASE_URL",
+PORT=3000
+NODE_ENV=development # or production
+CORS_ORIGINS=http://localhost:5173,https://aa-fe-dev.up.railway.app/ # CORS allowed origins
 
 # SAIH Ebro API configuration
-SAIHEBRO_API_BASE_URL: "https://www.saihebro.com/datos/apiopendata",
-SAIHEBRO_BASE_PORT: 443,
-SAIHEBRO_API_KEY: "YOUR_API_KEY",
+SAIHEBRO_API_BASE_URL=https://www.saihebro.com/datos/apiopendata
+SAIHEBRO_BASE_PORT=443
+SAIHEBRO_API_KEY=YOUR_API_KEY
 
 # PostgreSQL database configuration
-DATABASE_URL: "YOUR_DATABASE_URL",
+DATABASE_URL=YOUR_DATABASE_URL
