--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@prisma/client": "^6.8.2",
 		"axios": "^1.8.4",
+		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.44.0",
@@ -29,6 +30,7 @@
 		"pg": "^8.16.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.1",
 		"@types/multer": "^1.4.13",
 		"@types/node": "^20.14.9",
