implemented pushsager notification on new user confirmation

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ SAIHEBRO_API_KEY=YOUR_API_KEY
 
 # PostgreSQL database configuration
 DATABASE_URL=YOUR_DATABASE_URL
+
+# Pushsafer configuration
+PUSHSAFER_PRIVATE_KEY=YOUR_20CHAR_PUSHSAFER_PRIVATE_KEY
