--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
   // #endregion
   // #region Debugger
   "debug.javascript.autoAttachFilter": "onlyWithFlag",
-  "debug.internalConsoleOptions": "openOnSessionStart"
+  "debug.internalConsoleOptions": "openOnSessionStart",
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
+  }
   // #endregion
 }
