--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/express": "^5.0.1",
 		"@types/multer": "^1.4.13",
 		"@types/node": "^20.14.9",
+		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.15.2",
 		"drizzle-kit": "^0.31.1",
 		"prisma": "^6.10.1",
