--- a/package.json
+++ b/package.json
@@ -19,30 +19,30 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.8.2",
+		"@prisma/client": "^7.2.0",
+		"async-mutex": "^0.5.0",
 		"axios": "^1.8.4",
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
-		"drizzle-orm": "^0.44.0",
 		"esbuild": "^0.23.0",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
 		"multer": "^2.0.1",
 		"node-cron": "^3.0.3",
 		"pg": "^8.16.0",
+		"pino": "^10.1.0",
 		"pushsafer-notifications": "^0.2.0"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.1",
 		"@types/multer": "^1.4.13",
-		"@types/node": "^20.14.9",
+		"@types/node": "^25.0.3",
 		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.15.2",
 		"@vitest/coverage-istanbul": "^3.2.4",
-		"drizzle-kit": "^0.31.1",
-		"prisma": "^6.10.1",
+		"prisma": "^7.2.0",
 		"tsx": "^4.19.4",
 		"vitest": "^3.2.4",
 		"zod": "^3.25.36"
