--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
+		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"async-mutex": "^0.5.0",
 		"axios": "^1.8.4",
@@ -42,6 +43,7 @@
 		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.15.2",
 		"@vitest/coverage-istanbul": "^3.2.4",
+		"pino-pretty": "^13.1.3",
 		"prisma": "^7.2.0",
 		"tsx": "^4.19.4",
 		"vitest": "^3.2.4",
