--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Backend for the Alertaigua project, providing APIs and services for flood alerting and monitoring.",
 	"packageManager": "pnpm@9.4.0",
 	"engines": {
-		"node": ">=18.11",
+		"node": "24.x",
 		"pnpm": ">=7.27"
 	},
 	"scripts": {
